Commit For Pk-1270 and 1271

--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -1167,11 +1167,11 @@
                                                 <div class="col-2">
                                                     <label>
                                                         @L["BannerImages"]
-                                                        <Span>
+                                                      @*   <Span>
                                                             <Tooltip Class="d-inline-block" Text="@L["uploadUpto5Images"]">
                                                                 <Icon class="fa-question-circle" />
                                                             </Tooltip>
-                                                        </Span>
+                                                        </Span> *@
                                                     </label>
                                                 </div>
                                                 <div class="col-10 ">
