--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -1219,11 +1219,12 @@
                                             <div class="row">
                                                 <div class="col-2">
                                                     <label>
-                                                        @L["BannerImages"]<Span>
+                                                        @L["BannerImages"]
+                                                      @*   <Span>
                                                             <Tooltip Text="@L["uploadUpto5Images"]">
                                                                 <Icon class="fa-question-circle" />
                                                             </Tooltip>
-                                                        </Span>
+                                                        </Span> *@
                                                     </label>
                                                 </div>
                                                 <div class="col-10">
