--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -126,7 +126,13 @@
         </div>
         <div class="row">
             <div class="col-2">
-                <label>@L["Subject"]</label>
+                <label>@L["SEODescription"]
+                <Span>
+                                                            <Tooltip Text="@L["SEODescriptionInfo"]">
+                                                                <Icon class="fa-question-circle" />
+                                                            </Tooltip>
+                                                        </Span>
+                </label>
             </div>
             <div class="col-10">
                 <TinyMCEEditor 
@@ -1981,7 +1987,7 @@
                     <TextEdit Placeholder="@L["ExchangePolicy"]" Disabled @bind-Text="@EditGroupBuyDto.ExchangePolicy" MaxLength="60" ShowCount />
                 </div>
                 <div class=" col-12">
-                    <Blazored.TextEditor.BlazoredTextEditor @ref="@ExchangePolicyHtml">
+                    <Blazored.TextEditor.BlazoredTextEditor @ref="@ExchangePolicyHtml" Placeholder="@L["Composeanepic"]">
                         <ToolbarContent>
                             <select class="ql-header">
                                 <option selected=""></option>
@@ -2026,7 +2032,7 @@
             </div>
             <div class="col-10">
                 <div class="col-12">
-                    <Blazored.TextEditor.BlazoredTextEditor @ref="@NotifyEmailHtml">
+                    <Blazored.TextEditor.BlazoredTextEditor @ref="@NotifyEmailHtml" Placeholder="@L["Composeanepic"]">
                         <ToolbarContent>
                             <select class="ql-header">
                                 <option selected=""></option>
