#PK-1335 Member order modification

--- a/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberOrdersTab.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberOrdersTab.razor
@@ -11,7 +11,7 @@
         <h4>@L["Orders"]</h4>
         <Row HorizontalGutter="10">
             <Column ColumnSize="ColumnSize.Is4">
-                <PikachuCard Type="success" Title="@L["Open"]" Count="Open" CountVisible="true"></PikachuCard>
+                <PikachuCard Type="success" Title="@L["OrdersCompleted"]" Count="Completed" CountVisible="true"></PikachuCard>
             </Column>
             <Column ColumnSize="ColumnSize.Is4">
                 <PikachuCard Type="warning" Title="@L["Exchange"]" Count="Exchange" CountVisible="true"></PikachuCard>
