--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -1,5 +1,10 @@
 ﻿@page "/GroupBuyManagement/GroupBuyList/Edit/{id}"
 
+@using System.ComponentModel
+@using Blazorise.Components
+@using Blazorise.LoadingIndicator;
+@using Kooco.Pikachu.Blazor.Components
+@using Kooco.Pikachu.Blazor.Helpers;
 @using Kooco.Pikachu.Blazor.Pages.Components.Icons
 @using Kooco.Pikachu.EnumValues;
 @using Kooco.Pikachu.GroupBuyOrderInstructions
@@ -8,18 +13,14 @@
 @using Kooco.Pikachu.Images
 @using Kooco.Pikachu.Items.Dtos;
 @using Kooco.Pikachu.Orders
+@using Kooco.Pikachu.Orders.Interfaces
 @using Kooco.Pikachu.PaymentGateways
 @using Kooco.Pikachu.Tenants
 @using Microsoft.Extensions.Configuration;
+@using Microsoft.Extensions.Localization;
 @using Pikachu.Items;
 @using Pikachu.Localization;
-@using Microsoft.Extensions.Localization;
 @using Volo.Abp.AspNetCore.Components.Web
-@using System.ComponentModel
-@using Blazorise.Components
-@using Blazorise.LoadingIndicator;
-@using Kooco.Pikachu.Blazor.Helpers;
-@using Kooco.Pikachu.Blazor.Components
 @inherits PikachuComponentBase
 @inject IMyTenantAppService MyTenantAppService
 @inject IGroupBuyAppService AppService
