--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/GroupBuyReportDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/GroupBuyReportDetails.razor
@@ -1,11 +1,12 @@
 ﻿@page "/GroupBuyManagement/GroupBuyReportDetails/{Id}";
+@using Blazorise.LoadingIndicator;
 @using Kooco.Pikachu.EnumValues;
 @using Kooco.Pikachu.GroupBuys;
 @using Kooco.Pikachu.Localization;
 @using Kooco.Pikachu.Orders;
+@using Kooco.Pikachu.Orders.Interfaces
 @using Microsoft.Extensions.Localization;
 @using Volo.Abp.AspNetCore.Components.Messages;
-@using Blazorise.LoadingIndicator;
 
 @inherits PikachuComponentBase
 @inject IGroupBuyAppService _groupBuyAppService
