--- a/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberDetailsTab.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberDetailsTab.razor
@@ -1,5 +1,6 @@
 ﻿@using Kooco.Pikachu.Members
 @using Kooco.Pikachu.Orders
+@using Kooco.Pikachu.Orders.Interfaces
 @using Kooco.Pikachu.UserAddresses
 @using Microsoft.Extensions.Logging
 @using Serilog
