--- a/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberOrdersTab.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberOrdersTab.razor
@@ -2,6 +2,7 @@
 @using Kooco.Pikachu.GroupBuys
 @using Kooco.Pikachu.Members
 @using Kooco.Pikachu.Orders
+@using Kooco.Pikachu.Orders.Interfaces
 @inherits PikachuComponentBase
 @inject IMemberAppService MemberAppService
 @inject IOrderAppService OrderAppService
