--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderShippingDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderShippingDetails.razor
@@ -1,12 +1,13 @@
 ﻿@* @page "/Orders/OrderShippingDetails/{id}" *@
 @page "/Orders/OrderShippingDetails/{Ids}"
+@using Blazorise;
 @using Kooco.Pikachu.EnumValues;
 @using Kooco.Pikachu.Localization;
 @using Kooco.Pikachu.OrderItems;
 @using Kooco.Pikachu.Orders;
+@using Kooco.Pikachu.Orders.Interfaces
 @using Kooco.Pikachu.StoreComments;
 @using Microsoft.Extensions.Localization;
-@using Blazorise;
 @using Volo.Abp.AspNetCore.Components.Messages;
 @using Volo.Abp.Users;
 
