--- a/src/Kooco.Pikachu.Blazor/Pages/VoidInvoices/VoidInvoice.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/VoidInvoices/VoidInvoice.razor
@@ -1,12 +1,13 @@
 ﻿@page "/VoidInvoice"
+@using Blazorise;
+@using Blazorise.LoadingIndicator;
 @using Kooco.Pikachu.EnumValues;
 @using Kooco.Pikachu.Localization;
 @using Kooco.Pikachu.OrderItems;
 @using Kooco.Pikachu.Orders;
+@using Kooco.Pikachu.Orders.Interfaces
 @using Microsoft.Extensions.Localization;
-@using Blazorise;
 @using Volo.Abp.AspNetCore.Components.Messages;
-@using Blazorise.LoadingIndicator;
 
 @inject IStringLocalizer<PikachuResource> L;
 @inject NavigationManager NavigationManager;
