--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -1844,7 +1844,7 @@
                             </span>
                         </ToolbarContent>
                     </Blazored.TextEditor.BlazoredTextEditor> *@
-                    <textarea rows="5" @bind="@CreateGroupBuyDto.GroupBuyConditionDescription" oninput="enforceLineLimit(this)" class="form-control" />
+                    <textarea rows="7" @bind="@CreateGroupBuyDto.GroupBuyConditionDescription" oninput="enforceCharacterLimit(this, 1000)" class="form-control" />
                 </div>
             </div>
         </div>
