#PK-1332 Disabled Front-end and backend account sync

--- a/src/Kooco.Pikachu.Blazor/Pages/Account/Login.css
+++ b/src/Kooco.Pikachu.Blazor/Pages/Account/Login.css
@@ -343,6 +343,16 @@
     margin: auto;
 }
 
+#AbpPageAlerts {
+    max-width: 28rem;
+    margin: auto;
+}
+
+.alert {
+    z-index: 10;
+    color: white;
+}
+
 .card-body {
     color: white;
     padding: 2rem !important;
