--- a/src/Kooco.Pikachu.Blazor/Pages/_Host.cshtml
+++ b/src/Kooco.Pikachu.Blazor/Pages/_Host.cshtml
@@ -70,7 +70,7 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
-
+    <partial name="_JsLocalization" />
     <abp-script-bundle name="@BlazorLeptonXLiteThemeBundles.Scripts.Global" />
     <script src="/fileDownload.js"></script>
     <script src="/printTradeDocument.js"></script>
